# nix-bindings

./: .envrc  .gitignore  .rustfmt.toml  CONTRIBUTING.md  Cargo.toml  README.md  build.rs  flake.nix  lib.rs  shell.nix  wrapper.h
.github/: dependabot.yml
.github/workflows/: backport.yml  check.yml  coverage.yml  doc.yml  publish.yml  test.yml
docs/: MAINTAINERS.md
examples/: eval_basic.rs  eval_construct.rs  eval_function.rs  version.rs
lix-bindings/: Cargo.toml  build.rs
lix-bindings/include/: lix_wrapper.h
lix-bindings/src/: lib.rs  lix_wrapper.cc
nix-bindings/: Cargo.toml  README.md
nix-bindings-sys/: Cargo.toml  README.md  build.rs  lib.rs
nix-bindings-sys/examples/: eval_basic.rs  eval_construct.rs  eval_function.rs  flake_basic.rs  version.rs
nix-bindings-sys/include/: nix_api_expr_shim.h  nix_api_flake_shim.h  nix_api_store_text.h  wrapper.h
nix-bindings-sys/src/: lib.rs
nix-bindings-sys/src/wrappers/: add_to_store.cc  eval.cc  flake.cc  init_path.cc
nix-bindings-sys/tests/: eval.rs  flake.rs  memory.rs  primop.rs  store.rs  util.rs
nix-bindings/src/: attrs.rs  context.rs  error.rs  eval.rs  external.rs  flake.rs  lib.rs  lists.rs  plugins.rs  primop.rs  store.rs  value.rs  value_ops.rs
nix-bindings/tests/: integration.rs
src/: lib.rs
tests/: eval.rs  integration.rs  store.rs  util.rs
