[workspace]
members  = [ "nix-bindings", "lix-bindings", "nix-bindings-sys" ]
resolver = "3"

[profile.release]
lto = "thin"

[profile.opt]
codegen-units = 1
inherits      = "release"
lto           = "fat"
opt-level     = 3
strip         = true

[workspace.package]
authors      = [ "NotAShelf <raf@notashelf.dev>" ]
categories   = [ "api-bindings", "external-ffi-bindings", "development:ffi" ]
description  = "Rust bindings for the Nix build tool and its various implementations"
edition      = "2024"
license      = "MIT"
readme       = true
repository   = "https://github.com/notashelf/nix-bindings"
rust-version = "1.85"
version      = "25.10.24"                                                             # yy.mm.dd

[workspace.dependencies]
nix-bindings-sys = { path = "nix-bindings-sys", version = "0.285.0" }
