[package]
name                   = "lix-bindings"
description            = "Independent high-level Rust bindings for the Lix build tool"
authors.workspace      = true
edition.workspace      = true
version                = "0.293.0"
readme.workspace       = true
repository.workspace   = true
rust-version.workspace = true
license.workspace      = true
categories.workspace   = true

[build-dependencies]
pkg-config = "0.3"
cc = "1.0"

[dependencies]
libc = "0.2"

[dev-dependencies]
serial_test = "3.2.0"
