[package]
name                 = "nix-bindings-sys"
repository.workspace = true
version              = "0.285.0"
authors.workspace    = true
edition.workspace    = true
license.workspace    = true
description          = "Raw, unsafe FFI bindings to the Nix C API"
publish              = true

[build-dependencies]
bindgen         = { version = "0.72.0", default-features = false, features = [ "logging", "runtime" ] }
doxygen-bindgen = "0.1.3"
pkg-config      = "0.3.32"

[dev-dependencies]
serial_test = "3.2.0"

[package.metadata.docs.rs]
targets = [ "x86_64-unknown-linux-gnu" ]
