[package]
name                   = "nix-bindings"
description            = "Rust binding for Nix, the build tool"
edition.workspace      = true
version.workspace      = true
readme.workspace       = true
repository.workspace   = true
rust-version.workspace = true
license.workspace      = true
publish                = true

[lib]
path = "src/lib.rs"

[dependencies]
nix-bindings-sys.workspace = true

[dev-dependencies]
serial_test.workspace = true
tempfile.workspace    = true
